Added Alt Attributes to all images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,45 +120,20 @@ p {
     color: #ffffff;
 }
 
-/* .online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-} */
 
 /* Consolidated img classes for single content-block image*/
+
 .content-block img {
     max-height: 200px;
 }
 
-/* Consolidated h2 classes to singe content-block image*/
+/* Consolidated h2 classes to single content-block image*/
 
 .content-block h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-/* .online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-} */
 
 .footer {
     padding: 30px;
